--- a/styles/smaller.css
+++ b/styles/smaller.css
@@ -19,16 +19,22 @@ body {
 header {
     display: flex;
     align-items: center;
+    text-align: center;
     justify-content: space-between;
-    padding: 1rem;
+    margin-bottom: 2rem;
+    padding: 1.2rem;
     background-color: #0044cc;
+    background-size: cover;
     color: white;
+    border-radius: 10px;
+    margin: auto;
 }
 
 header img {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
+    margin-right: 2rem;
 }
 
 header span {
@@ -38,23 +44,25 @@ header span {
 
 /* Navigation Styling */
 nav {
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 nav ul {
-    list-style: none;
+    list-style: cross-fade(20%);
     display: flex;
-    flex-direction: column;
+    flex-direction: column ;
     gap: 0.5rem;
 }
 
 nav ul li {
-    text-align: center;
+    text-align: flex;
+    flex-direction: column;
+    text-box: none;
 }
 
 nav ul li a {
     text-decoration: none;
-    color: white;
+    color: rgb(255, 255, 255);
     background-color: #0066ff;
     padding: 0.5rem 1rem;
     font-size: 1.2rem;
@@ -72,7 +80,7 @@ main {
     margin-top: 2rem;
 }
 
-main h1 {
+main h2 {
     font-size: 2rem;
     text-align: center;
     margin-bottom: 1rem;
@@ -80,15 +88,44 @@ main h1 {
 
 section {
     margin-bottom: 2rem;
-    padding: 1rem;
-    background-color: white;
+    padding: 1.5rem;
+    background-color: rgb(121, 138, 235);
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 3px 6px rgba(108, 161, 240, 0.1);
+    
 }
 
 section h2 {
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin-bottom: 1rem;
+    border-radius: 5px;
+}
+
+section p {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: auto;
+    text-shadow: #cad3df;
+    border-radius: 5px;
+}
+
+section :hover{
+    background-color: rgb(242, 243, 247);
+    text-transform: initial;
+    animation-delay: 3ms;
+    animation-name: initial;
+}
+
+section ul li{
+    list-style-type: none;
+    display: table-column;
+    text-align: center;
+    border-radius: 7px;
+    margin-top: 15px;
+}
+
+section li{
+     border-radius: 7px;
+    display: table-column;
 }
 
 /* Footer Styling */
@@ -101,6 +138,7 @@ footer {
 
 footer p {
     margin: 0.5rem 0;
+
 }
 
 /* Media query for small screens */
