"completed the join page "

--- a/chamber/style/main.css
+++ b/chamber/style/main.css
@@ -329,7 +329,7 @@ dialog .close-modal:hover {
 }
 
 .thankyou-content h2 {
-    color: #28a745; /* Green for success */
+    color: #1859d2; /* Green for success */
     margin-bottom: 1em;
 }
 
