--- a/chamber/style/dirctory.css
+++ b/chamber/style/dirctory.css
@@ -7,7 +7,7 @@
 }
  
 :root {
-    --primary-color: #1431d5;
+    --primary-color: #3875ee;
     --secondary-color: #FAEDFC; 
     --accent-color1: #E6E6E6;
     --accent-color2: #F2F2F2;
@@ -45,18 +45,22 @@ a {
 }
 
 
+
+
+
+
 .nav-container > span {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 15px 13px;
-    margin-bottom: 70px;
+    margin-bottom: 10px;
 
 }
 
 .nav-container > span a {
     width: 150px;
-    height: 65px;
+    height: 59px;
 }
 
 .nav-container > span img {
@@ -230,6 +234,9 @@ a {
     padding: 10px;
     justify-content: space-evenly;
 }
+
+
+
 
 
 footer {
